data/derived/comb/progs/unify/prog7590.ml.out
Characters 49-62:
  else  digitsOfInt n/10;;
        ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
